modal fix on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,16 @@
-body {
+body,
+.container-xl,
+.modal-xl {
   min-width: 667px;
+}
+
+.modal-xl {
+    padding-right: 0px !important;
+}
+
+.modal-backdrop {
+    width: 100%;
+    height: 100%;
 }
 
 td.dt-teamDetailsClick {
@@ -84,7 +95,7 @@ td {
     height: 25rem;
 }
 
-.form-floating>.form-select {
+nav .form-floating>.form-select {
     font-size: .95em !important;
     height: 2.5rem !important;
     min-height: 2.5rem !important;
@@ -93,7 +104,7 @@ td {
     padding-bottom: 0 !important;
 }
 
-.form-floating>label {
+nav .form-floating>label {
     font-size: .9em !important;
     padding: 0.5rem 0.5rem !important;
 }
